# anna

./: CMakeLists.txt  README.md
client/cpp/: CMakeLists.txt  cli.cpp  server.cpp
client/objstore/: CMakeLists.txt
client/python/: setup.py
client/python/anna/: client.py  common.py  lattices.py
include/: kvs_threads.hpp
include/kvs/: server_utils.hpp
scripts/: start-kvs-local.sh  stop-kvs-local.sh
src/benchmark/: benchmark.cpp  trigger.cpp
src/kvs/: server.cpp  user_request_handler.cpp
src/monitor/: monitoring.cpp
src/route/: routing.cpp
tests/include/lattices/: CMakeLists.txt
tests/simple/: test-simple.sh
